welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:19: error: Unmatched closing brace '}' ignored here
	}
        ^Balin:20: error: eof expected but '}' found.
}
^